--- a/docs/core/Directives/asyncAppend.mdx
+++ b/docs/core/Directives/asyncAppend.mdx
@@ -39,3 +39,7 @@ Dans cet exemple :
 - La fonction **`renderPosts`** effectue une opération asynchrone (par exemple, une requête réseau) pour récupérer une liste de posts.
 - La directive **`asyncAppend`** est utilisée pour ajouter de manière asynchrone le contenu généré par **`renderPosts`** à l'élément **`<div>`** du template.
 - Lorsque les données deviennent disponibles, la directive met à jour de manière asynchrone le contenu de l'élément DOM.
+
+import SandpackSample from '../../../src/components/SandpackSamples/asyncAppend-sample';
+
+<SandpackSample/>
