--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -6,7 +6,7 @@ sidebar_position: 1
 
 import Logo from '../static/img/logo.svg';
 
-<div style = {{ display : "grid" , justifyContent : "center" , textAlign : "center" }} >
+<div style = {{ textAlign : "center" }} >
 	<Logo style = {{ aspectRatio : "1/1" , height : "200px" }} />
 	<h3>Welcome to the Lithium Documentation 👋</h3>
 </div>
