--- a/docs/starting/component-context/consomables.mdx
+++ b/docs/starting/component-context/consomables.mdx
@@ -4,4 +4,16 @@ sidebar_position: 2
 
 # Consomables
 
-[🚧text manquant]
+Les **consumables** dans Lithium sont des entités qui représentent des ressources ou des données pouvant être consommées dans un contexte spécifique. Ils permettent un partage efficace et contextuel des ressources entre différents composants ou parties de l'application.
+
+### Fonctionnalité
+
+- **Partage de ressources** : Les consumables permettent à plusieurs composants de partager et consommer des ressources communes, telles que des services, des données ou des états, sans avoir à propager explicitement ces ressources à travers des props ou des arguments.
+- **Contextualisation** : Les consumables sont souvent utilisés dans un contexte défini, permettant de structurer les ressources de manière modulaire et adaptée aux besoins spécifiques de l'application.
+- **Consommation contrôlée** : Les composants qui consomment des consumables peuvent accéder aux ressources de manière contrôlée, garantissant une utilisation cohérente et sécurisée des données partagées.
+
+### Concept Clé
+
+- **Gestion centralisée** : Les consumables facilitent la gestion centralisée des états ou services partagés, réduisant la duplication de code et améliorant la cohérence de l'application.
+- **Séparation des préoccupations** : En isolant la logique de consommation des ressources, les consumables permettent de mieux structurer l'application et de maintenir une séparation claire des responsabilités.
+- **Adaptabilité** : Grâce à leur capacité à s'intégrer dans différents contextes, les consumables offrent une flexibilité accrue dans la manière dont les composants interagissent avec les données et les services.
