--- a/docs/starting/component-context/observables.mdx
+++ b/docs/starting/component-context/observables.mdx
@@ -4,4 +4,16 @@ sidebar_position: 1
 
 # Observables
 
-[🚧text manquant]
+Dans Lithium, les **observables** sont des entités qui permettent de suivre les changements d'état ou de données au sein d'un composant ou entre différents composants. Ils jouent un rôle crucial dans la réactivité de l'application, permettant aux interfaces utilisateur de se mettre à jour automatiquement en réponse aux modifications des données sous-jacentes.
+
+### Fonctionnalité
+
+- **Réactivité** : Les observables permettent à un composant de réagir aux changements d'état en temps réel. Lorsqu'une valeur observable est modifiée, tous les composants ou fonctions qui se sont souscrits à cet observable sont notifiés et peuvent réagir en conséquence.
+- **Souscription** : Les composants peuvent s'abonner à un observable pour recevoir des notifications à chaque fois que l'état de l'observable change.
+- **Propagation des mises à jour** : Les observables facilitent la propagation des changements de données dans toute l'application, assurant ainsi une cohérence de l'interface utilisateur.
+
+### Concept Clé
+
+- **Mise à jour automatique de l'UI** : Les observables permettent une mise à jour en temps réel de l'interface utilisateur, sans nécessiter d'intervention manuelle pour rafraîchir les composants.
+- **Gestion de l'état** : En centralisant la gestion des états dynamiques, les observables simplifient l'architecture de l'application, réduisant la complexité du code et améliorant sa maintenabilité.
+- **Flexibilité** : Les observables peuvent être utilisés dans divers scénarios, comme la synchronisation de données entre composants ou la gestion d'événements.
